tests/baselines/reference/mergedInterfacesWithInheritedPrivates3.errors.txt
==== tests/cases/compiler/mergedInterfacesWithInheritedPrivates3.ts (3 errors) ====
    class C {
        private x: number;
    }
    
    class C2 {
        private x: number;
    }
    
    interface A extends C { // error
              ~
!!! mergedInterfacesWithInheritedPrivates3.ts(9,11): error TS2189: Interface 'A' cannot simultaneously extend types 'C' and 'C2':
!!! Named properties 'x' of types 'C' and 'C2' are not identical.
        y: string;
    }
    
    interface A extends C2 { 
        z: string;
    }
    
    class D extends C implements A { // error
          ~
!!! mergedInterfacesWithInheritedPrivates3.ts(17,7): error TS2137: Class D declares interface A but does not implement it:
!!! 	Types 'C' and 'C2' define property 'x' as private.
        y: string;
        z: string;
    }
    
    module M {
        class C {
            private x: string;
        }
    
        class C2 {
            private x: number;
        }
    
        interface A extends C { // error, privates conflict
                  ~
!!! mergedInterfacesWithInheritedPrivates3.ts(31,15): error TS2189: Interface 'A' cannot simultaneously extend types 'M.C' and 'M.C2':
!!! Named properties 'x' of types 'M.C' and 'M.C2' are not identical.
            y: string;
        }
    
        interface A extends C2 {
            z: string;
        }
    }